upload project test source code, report and image